2004-04-09  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: Show that something is going
	on so people dont get too worried. (Speed might need some work)
	* Makefile.am: add glib

2004-04-04  John Luke  <jluke@cfl.rr.com>

	* CSharpBindingExecutionManager.cs: improve error message

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Gui/OutputOptionsPanel.cs:
	* Gui/CodeGenerationPanel.cs: gettextify

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Project/CSharpCompilerParameters.cs: duh, refix library target bug

2004-04-01  Todd Berman  <tberman@sevenl.net>

	* Gui/OutputOptionsPanel.cs: parse resource string, closes bug #56325

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingExecutionManager.cs: dont test CompileTarget, for now
	assume *everything* is being run in a terminal and pausing for output.

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* Makefile.am: i think this fixed nick's bug.

2004-03-28  John Luke  <jluke@cfl.rr.com>

	* Parser/Resolver.cs: comment some CWL's that were causing exceptions

2003-03-27  Todd Berman  <tberman@sevenl.net>

	* *: update parser and other things from upstream.

2003-03-26  John Luke  <jluke@cfl.rr.com>

	* CSharpBindingExecutionManager.cs: use xterm instead of
	gnome-terminal, fixes bug #53689 and also works when people
	don't have gnome-terminal installed

2004-03-22  Todd Berman  <tberman@sevenl.net>

	* Project/CSharpCompilerParameters.cs: reverse WinExe and Library in
	the enum, closing bug #55881. fix from vdaron

2004-03-21  Todd Berman  <tberman@sevenl.net>

	* Parser/Parser.cs:
	* Parser/CSharpVisitor.cs:
	* Parser/Resolver.cs:
	* Parser/TypeVisitor.cs:
	* Parser/SharpDevelopTree/Indexer.cs:
	* Parser/SharpDevelopTree/Method.cs:
	* Parser/SharpDevelopTree/Event.cs:
	* Parser/SharpDevelopTree/ReturnType.cs:
	* Parser/SharpDevelopTree/Field.cs:
	* Parser/SharpDevelopTree/Property.cs:
	* Parser/SharpDevelopTree/Constructor.cs: