@@ -1,3 +1,9 @@
+2004-04-19  Todd Berman  <tberman@sevenl.net>
+
+	* Gui/SourceEditorView.cs: call the right resolver method.
+	* CodeCompletion/CodeCompletionDataProvider.cs: Add IParameter results.
+	* CodeCompletion/CodeCompletionData.cs: Add IParameter ctor.
+
 2004-04-16  Todd Berman  <tberman@sevenl.net>
 
 	* Gui/SourceEditorBuffer.cs: On load, place the cursor at the top
