@@ -1,3 +1,8 @@
+2004-04-19  Todd Berman  <tberman@sevenl.net>
+
+	* Parser/Resolver.cs: Turn local variables into a properly consumable
+	type for code completion.
+
 2004-04-09  Todd Berman  <tberman@sevenl.net>
 
 	* CSharpBindingCompilerManager.cs: Show that something is going
